chore: update license info
Signed-off-by: Rifa Achrinza <25147899+achrinza@users.noreply.github.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # SPDX-FileCopyrightText: LoopBack Contributors
 # SPDX-License-Identifier: MIT
 
-vendors
+Rifa Achrinza <rifa@achrinza.com> (https://github.com/achrinza)
